--- a/app/src/main/res/layout/layout_password_input_view.xml
+++ b/app/src/main/res/layout/layout_password_input_view.xml
@@ -10,9 +10,8 @@
         android:layout_height="30dp"
         android:cursorVisible="false"
         android:gravity="center"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
         android:focusable="true"
+        android:background="@drawable/edit_bg"
         android:focusableInTouchMode="true"
         android:inputType="numberPassword"
         android:maxLength="1"/>
@@ -23,9 +22,8 @@
         android:layout_height="30dp"
         android:cursorVisible="false"
         android:gravity="center"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
         android:focusable="true"
+        android:background="@drawable/edit_bg"
         android:focusableInTouchMode="true"
         android:inputType="numberPassword"
         android:maxLength="1"/>
@@ -36,9 +34,8 @@
         android:layout_height="30dp"
         android:cursorVisible="false"
         android:gravity="center"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
         android:focusable="true"
+        android:background="@drawable/edit_bg"
         android:focusableInTouchMode="true"
         android:inputType="numberPassword"
         android:maxLength="1"/>
@@ -49,9 +46,8 @@
         android:layout_height="30dp"
         android:cursorVisible="false"
         android:gravity="center"
-        android:layout_marginEnd="15dp"
-        android:layout_marginRight="15dp"
         android:focusable="true"
+        android:background="@drawable/edit_bg"
         android:focusableInTouchMode="true"
         android:inputType="numberPassword"
         android:maxLength="1"/>
